changed sizing issues and header text wrapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ header {
 
 
 .header-text { 
-  padding: 2em 2em; 
+  margin: 2em 3em ;
   text-align: center;
   color: #3b3561bb; 
   font-size: 1.1em;
@@ -333,11 +333,6 @@ footer {
 
  header {
   border-radius: 8px;
- }
-
- .header-text p {
-  font-size: 2.4vw;
-  padding-top: 0.08vw;
  }
 
   .header-text{
